Some more updates regarding #3140
